--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-datasource-rest": "^0.6.11",
     "apollo-server": "^2.9.16",
     "apollo-server-express": "^2.9.16",
     "express": "^4.17.1",
